--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
+                            <img src="./vuelo1.png" class="img-responsive " alt=" ">
+                        </a>
+                        <div class="portfolio-caption ">
+                            <h4>Bad Weather Challenge</h4>
+                            <p class="text-muted ">UX Writing</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item ">
+                        <a href="#portfolioModal5" class="portfolio-link " data-toggle="modal">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <i class="fa fa-plus fa-3x"></i>
+                                </div>
+                            </div>
                             <img src="./soon1.jpg" class="img-responsive " alt=" ">
                         </a>
                         <div class="portfolio-caption ">
@@ -163,20 +177,6 @@
                         </div>
                     </div>
                     <!-- <div class="col-md-4 col-sm-6 portfolio-item ">
-                        <a href="#portfolioModal4 " class="portfolio-link " data-toggle="modal ">
-                            <div class="portfolio-hover ">
-                                <div class="portfolio-hover-content ">
-                                    <i class="fa fa-plus fa-3x "></i>
-                                </div>
-                            </div>
-                            <img src="https://unsplash.imgix.net/44/9s1lvXLlSbCX5l3ZaYWP_hdr-1.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=f0a1db79752dbb04ec6d2aab7d17c7b0 " class="img-responsive " alt=" ">
-                        </a>
-                        <div class="portfolio-caption ">
-                            <h4>Golden</h4>
-                            <p class="text-muted ">Website Design</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6 portfolio-item ">
                         <a href="#portfolioModal5 " class="portfolio-link " data-toggle="modal ">
                             <div class="portfolio-hover ">
                                 <div class="portfolio-hover-content ">
@@ -533,7 +533,7 @@
         </div>
 
         <!-- Portfolio Modal 4 -->
-        <!-- <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
                     <div class="lr">
@@ -544,21 +544,37 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body"> -->
-        <!-- Project Details Go Here -->
-        <!-- <h2>Project Name</h2>
-        <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-        <img class="img-responsive img-centered" src="https://unsplash.imgix.net/44/9s1lvXLlSbCX5l3ZaYWP_hdr-1.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=f0a1db79752dbb04ec6d2aab7d17c7b0" alt="">
-        <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that
-                        was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
-                        <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>Bad Weather Challenge</h2>
+                                <p class="item-intro text-muted">Challenge original de
+                                    <a href="https://dailyuxwriting.com/" target="_blank">Daily Ux Writing</a>.</p>
+                                <img class="img-responsive img-centered" src="./vuelo2.png" alt="">
+                                <h3>Escenario</h3>
+                                <p>Un viajero se encuentra en el aeropuerto esperando el último tramo de su viaje, cuando se cancela su vuelo debido al mal tiempo.</p>
+                                <h3>Desafío</h3>
+                                <p>Notificar desde la aplicación de la línea aérea acerca de la cancelación de vuelo y lo que debe hacer el usuario.</p>
+                                <h3>Requisitos</h3>
+                                <p><strong>Título:</strong> 45 caracteres máximo.</p>
+                                <p><strong>Cuerpo del texto:</strong> 175 caracteres máximo.</p>
+                                <p><strong>Botón:</strong> 25 caracteres máximo.</p>
+                                <h3>Mi solución</h3>
+                                <p><strong>"Vuelo cancelado por tormentas fuertes".</strong> Decidí que el título debía ser en tono informativo sin ser alarmista, describiendo el problema. Al leerlo, el usuario entiende lo que pasa, siendo el lenguaje claro
+                                    y conciso. Total de caracteres usados: 37</p>
+                                <p>
+                                    <strong>"No te preocupes, estamos para ayudarte a solucionar el inconveniente".</strong> En el cuerpo del programa se le da seguridad al usuario de que la compañía va a estar presente, ayudándolo. Se usa la palabra
+                                    "inconveniente" en lugar de "problema", para reforzar que es algo que se puede solucionar con la compañía, haciendo el mensaje tranquilizador. Total de caracteres: 68 </p>
+                                <p>
+                                    <strong>"Contactar ahora".</strong>Uso del infinitivo para que el usuario entienda que tiene el poder de acción. Explica en forma clara lo que debe hacer: comunicarse con la compañía donde se le dará una solución. El
+                                    uso del "ahora" refuerza la tranquilidad de que su problema será solucionado en el momento por la línea aérea.</p>
+
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
-            </div>
-            </div> -->
+        </div>
 
         <!-- Portfolio Modal 5 -->
         <!-- <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
