--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                                     "inconveniente" en lugar de "problema", para reforzar que es algo que se puede solucionar con la compañía, haciendo el mensaje tranquilizador. Total de caracteres: 68 </p>
                                 <p>
                                     <strong>"Contactar ahora".</strong>Uso del infinitivo para que el usuario entienda que tiene el poder de acción. Explica en forma clara lo que debe hacer: comunicarse con la compañía donde se le dará una solución. El
-                                    uso del "ahora" refuerza la tranquilidad de que su problema será solucionado en el momento por la línea aérea.</p>
+                                    uso del "ahora" refuerza la tranquilidad de que su problema será solucionado en el momento por la línea aérea. Cantidad de caracteres: 15</p>
 
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
