--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                 <p><strong>Botón:</strong> 25 caracteres máximo.</p>
                                 <h3>Mi solución</h3>
                                 <p>
-                                    <strong>"Todo sobre tu equipo en una sola app".</strong> Se llama la atención del usuario, informándole que tiene todos la información en un solo lugar, sin tener que recurrir a distintas fuentes. Cantidad de caracteres:
+                                    <strong>"Todo sobre tu equipo en una sola app".</strong> Se llama la atención del usuario, informándole que tiene todo lo que necesita en un solo lugar, sin tener que recurrir a distintas fuentes. Cantidad de caracteres:
                                     36
                                 </p>
                                 <p>En el cuerpo del mensaje se trata de empatizar con el usuario <strong>"Vivílo como si estuvieras ahí"</strong> , sabiendo previamente que va dedicado a fanáticos del fútbol que no pueden asistir. En el resto del cuerpo,
