--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                                 <h3>Escenario</h3>
                                 <p>Publicidad informativa de una nueva App, dirigida a usuarios fanáticos del fútbol que no pueden ver los partidos por motivos laborales.Necesitan un producto para seguir a su equipo.</p>
                                 <h3>Desafío</h3>
-                                <p>Escribir una pantalla promocional de una nueva app que realiza seguimientos de distintos equipos. Crea recordatorio de partidos, notifica del marcador en tiempo real y puede enviar videos con las mejores jugadas.</p>
+                                <p>Escribir una pantalla promocional de una nueva app que realiza seguimientos de distintos equipos. Crea recordatorio de partidos, notifica el marcador en tiempo real y puede enviar videos con las mejores jugadas.</p>
                                 <h3>Requisitos</h3>
                                 <p><strong>Título:</strong> 40 caracteres máximo.</p>
                                 <p><strong>Cuerpo del texto:</strong> 175 caracteres máximo.</p>
