--- a/index.html
+++ b/index.html
@@ -418,10 +418,10 @@
                                     <strong>"Todo sobre tu equipo en una sola app".</strong> Se llama la atención del usuario, informándole que tiene todo lo que necesita en un solo lugar, sin tener que recurrir a distintas fuentes. Cantidad de caracteres:
                                     36
                                 </p>
-                                <p>En el cuerpo del mensaje se trata de empatizar con el usuario <strong>"Vivílo como si estuvieras ahí"</strong> , sabiendo previamente que va dedicado a fanáticos del fútbol que no pueden asistir. En el resto del cuerpo,
+                                <p>En el cuerpo del mensaje se trata de empatizar con el usuario <strong>"Vivílo como si estuvieras ahí"</strong>, sabiendo previamente que va dedicado a fanáticos del fútbol que no pueden asistir. En el resto del cuerpo,
                                     se enumera lo que puede hacer con la app. Total de caracteres: 173</p>
-                                <p>En el CTA, usé el infinitivo, para centrar la decisión del usuario. También introduje el nombre de la app por si desea descargarla en otro momento y capitalicé <strong>Gratis</strong> para que no que el usuario sepa que
-                                    no tendrá ningún cargo por la misma. Al ver el nombre de la app y la palabra "gratis", genera confianza en el usuario. Total de caracteres: 23</p>
+                                <p>En el CTA, usé el infinitivo, para centrar la decisión del usuario. También introduje el nombre de la app por si desea descargarla en otro momento y capitalicé <strong>Gratis</strong> para que el usuario sepa sin lugar
+                                    a dudas, que no tendrá ningún cargo por la misma. Al ver el nombre de la app y la palabra "gratis", genera confianza en el usuario. Total de caracteres: 23</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
