--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@
                                 <h2>SuperStray App</h2>
                                 <p class="item-intro text-muted">App to donate, sponsor or adopt a dog.</p>
                                 <img class="img-responsive img-centered" src="./SuperStray@2x1.png" alt="">
+                                <p class="item-intro text-muted"> For Spanish explanation and chartflow, go down
+                                </p>
                                 <p>My first project using Figma. Like I said before, I'm not a graphic designer, so please, focus on the text. Even though it was in Spanish, I can translate it for you. On the first screen, you are introduced to our main
                                     character, SuperStray. He invites you to be his sidekick, collaborating with him through donations. Please keep in mind that some writing can be lost in translation.
                                 </p>
@@ -306,8 +308,16 @@
                                 <p><strong>Third Screen</strong>: Header: "SuperStray and friends thank you for your collaboration " Text: "Clicking on DONATION we are going to debit from your account $30 for one time only. If you want to keep helping us
                                     I invite you to click to know more about our programs of sponsorships and adoptions ". CTA: Button saying: Donate Button saying: I want to know more</p>
                                 <p><strong>Fourth screen</strong>: Header: "Let me know if you want to sponsor any of them for $60 a month or adopt any of SuperStray 's friends." CTA: Send mail</p>
-
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                <h3>Spanish Comments</h3>
+                                <p>A partir del diagrama de flujo mostrado más abajo, desarrollé las distintas pantallas de la app. Utilicé un lenguaje regionalista porque entre las diferentes opciones está la de adoptar, así que lo imaginé más local. Sin
+                                    embargo, es totalmente adaptable a un tono más neutro. </p>
+                                <p>En la primera pantalla, se explica de qué se trata la app en una forma clara. Elegí el botón con el texto
+                                    <strong>"Otro Día"</strong> porque la opción de "No quiero donar" me parecía que podía generar un rechazo en el usuario.</p>
+                                <p>El login previo a la donación es sencillo, con las opciones de login con una cuenta previamente registrada o crear una nueva.</p>
+                                <p>Con un segundo agradecimiento, se invita a donar, pero también se da la opción de <strong>"Quiero Saber Más"</strong>. Se explica que la donación es por única vez pero que hay distintos programas, tanto de padrinazgo como
+                                    adopción, por si se quieren involucrar más. Usé la primera persona en ese CTA, para empatizar con el usuario, poniéndome en su lugar.</p>
+                                <p>Se muestra algunos de los rescatados del refugio y se invita a dejar el email, por donde será contactado por la organización.</p>
+                                <img class="img-responsive img-centered" src="./chartflowstray.jpeg"> <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
                     </div>
