--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <h4>SuperStray App</h4>
-                            <p class="text-muted ">UX Writing | Copywriting</p>
+                            <p class="text-muted ">UX Writing | UX/UI | Copywriting</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 portfolio-item">
