--- a/index.html
+++ b/index.html
@@ -121,19 +121,34 @@
 
 
                     <div class="col-md-4 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <i class="fa fa-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img src="./socialfin.jpg" class="img-responsive" alt=" ">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Socialize App</h4>
+                            <p class="text-muted ">UX Writing</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item">
                         <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content">
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="./superstrayfinal1.jpg" class=" img-responsive" alt=" ">
+                            <img src="./superstrayfinal1.jpg" class="img-responsive" alt=" ">
                         </a>
                         <div class="portfolio-caption">
                             <h4>SuperStray App</h4>
-                            <p class="text-muted ">UX Writing | UX/UI | Copywriting</p>
+                            <p class="text-muted ">UX Writing | Copywriting | Content Design</p>
                         </div>
                     </div>
+
                     <div class="col-md-4 col-sm-6 portfolio-item">
                         <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                             <div class="portfolio-hover">
@@ -240,36 +255,69 @@
 
         <!-- Portfolio Modals -->
         <!-- Use the modals below to showcase details about your portfolio projects! -->
-
         <!-- Portfolio Modal 1 -->
-        <div class="portfolio-modal modal fade " id="portfolioModal1 " tabindex="-1 " role="dialog " aria-hidden="true ">
-            <div class="modal-content ">
-                <div class="close-modal " data-dismiss="modal ">
-                    <div class="lr ">
-                        <div class="rl ">
+
+
+
+        <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
                         </div>
                     </div>
                 </div>
-                <div class="container ">
-                    <div class="row ">
-                        <div class="col-lg-8 col-lg-offset-2 ">
-                            <div class="modal-body ">
-                                <!-- Project Details Go Here -->
-                                <h2>SuperStray</h2>
-                                <p class="item-intro text-muted ">Donation, sponsorship and adoption program.</p>
-                                <img class="img-responsive " src="./SuperStray@2x1.png " alt=" ">
-                                <p>My first project using Figma. Like I said before, I'm not a graphic designer, so please, focus on the text. Even though it was in Spanish, I can translate it for you. On the first screen, you are introduced to our main
-                                    character, SuperStray. He invites you to be his sidekick, collaborating with him through donations. Please keep in mind that some writing can be lost in translation.
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Socialize App</h2>
+                                <p class="item-intro text-muted">App to meet people through different activities.</p>
+                                <p>I was lucky enough to learn UX Writing with one great teacher, Mr.
+                                    <a href="https://www.justmario.com/about.html" target="_blank"><strong>Mario Ferrer</strong></a>, who did wonderful things for King (Bubble Witch and Candy Crush). For the final project of the course, we had to develop
+                                    an app. He did one about tacos delivery, and I prefered to go for a social app, that would make the process of making friends, getting to know people better, or maybe a date, a little bit easier.
+                                </p>
+                                <p>Socialize is a fictitious app for people older than 40 years old. It's an option for other apps like Tinder or Happn. The main difference is that it only focuses on sharing activities that are social gatherings, sports,
+                                    or cultural meetings. Examples: museum visits, some fun at a bowling alley, or some nice dinner setup.
+                                </p>
+                                <p> The tone is casual and friendly, adding some emojis once in a while to show humanity. With concise language, it guides the user through the app for the first time. The focus is also kept on the user. Talk
+                                    <strong>to</strong> them, not <strong>at</strong> them.
+                                </p>
+                                <p>I added some screens like a chatbot, errors, alert and push notifications.
+                                </p>
+                                <p><strong>Research:</strong> I did research on my own, paying attention to some complaints about the apps being all the same. Also, some people expressed nervousness when they have to meet other people on one in one date.
+                                    They wanted different experiences, where they could feel more at ease with more people.
                                 </p>
                                 <p>
-                                    <strong>First Screen:</strong> Header: "You too can be a hero like SuperStray. " Text: "Sometimes superheroes need helpers and that 's where you step in. With your donation, you can do a lot for him and his friends,
-                                    providing food and vet care." CTA: Button saying: Another Day Button saying: I want to donate</p>
-                                <p>
-                                    <strong>Second Screen:</strong> Header: "Thank you for helping" Text: "If you don't have an account, SuperStray helps you to create it " CTA: Button saying: Logging Button saying: Create Account</p>
-                                <p><strong>Third Screen</strong>: Header: "SuperStray and friends thank you for your collaboration " Text: "Clicking on DONATION we are going to debit from your account $30 for one time only. If you want to keep helping us
-                                    I invite you to click to know more about our programs of sponsorships and adoptions ". CTA: Button saying: Donate Button saying: I want to know more</p>
-                                <p><strong>Fourth screen</strong>: Header: "Let me know if you want to sponsor any of them for $60 a month or adopt any of SuperStray 's friends." CTA: Send mail</p>
+                                    <h3><strong>Onboarding</strong></p>
+                                <img class="img-responsive img-centered" src="./OnBoarding1.jpg" alt="">
+                                <p class="item-intro text-muted"> Onboarding
+                                </p>
 
+                                </h3>
+                                <p>The onboarding is simple, clear, and concise. It states what the app is, how it works and how to make a reservation.
+                                </p>
+                                <p></p>
+                                <h3><strong>Chatbot</strong> </p>
+                                </h3>
+                                <img class="img-responsive img-centered" src="./chatbot.png" alt="">
+                                <p class="item-intro text-muted"> Chatbot
+                                </p>
+
+
+                                <p>The conversation is clear, repeating patterns for confirmation purposes (like restating the time or the kind of activities)
+                                </p>
+                                <p>
+                                    <h3>Error, Alert and Push Notifications</h3>
+                                </p>
+                                <img class="img-responsive img-centered" src="./push.png" alt="">
+                                <p class="item-intro text-muted"> Error, Alert and Push Notifications
+                                </p>
+
+                                <p>
+                                    <strong>Error, alert and push notifications:</strong> For error handling, the app invites the user to find another activity if there is none available for that time frame. The push notification is friendly, reminding
+                                    you about the event you are attending, with a emoji that represents the activity. The alert screen, opens up a informing the user and inviting them to check the app to check a new available activity.
+                                </p>
 
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
@@ -278,8 +326,10 @@
                 </div>
             </div>
         </div>
-
         <!-- Portfolio Modal 2 -->
+
+
+
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -490,15 +540,6 @@
     <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
     <script src="./script.js"></script>
-
-</body>
-
-</html>
-<script src="https://raw.githubusercontent.com/IronSummitMedia/startbootstrap/gh-pages/templates/agency/js/jqBootstrapValidation.js"></script>
-<script src="https://raw.githubusercontent.com/IronSummitMedia/startbootstrap/gh-pages/templates/agency/js/contact_me.js"></script>
-
-
-
 
 </body>
 
