--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Portfolio</h2>
+                        <h3 class="section-subheading text-muted">For my current work at Awkbit, please check out this link! <a title="Writing for Awkbit" page="_blank">https://drive.google.com/drive/folders/1yIyT3i0jRXuK9SYD1WMAe8g6ceMIYzyK?usp=sharing</a></h3>
                         <!-- <h3 class="section-subheading text-muted">I'm not a graphic designer. I only made some graphics so the text would show in a specific context.</h3> -->
                     </div>
                 </div>
